add formatter to local date