@@ -27,6 +27,15 @@ dependencies {
 
 }
 
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
+}
+
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
+
 configurations {
     developmentOnly
     runtimeClasspath {
